...
      return;
    }
    setPage(page + 1);
    fetchDeviceStatuses();
  };
  return (
    <View style={styles.container} testID='deviceStatusScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={deviceStatusList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
